--- a/child_pages/cc-elections/Candidates/vasquez.html
+++ b/child_pages/cc-elections/Candidates/vasquez.html
@@ -263,10 +263,152 @@
 
         <details>
             <summary style="font-size: 2em; cursor:pointer; color:blue; text-decoration:underline;">Videos</summary>
-            <div class="video-box-modal can-sec">
-            <h3 class="video-heading">Long-form Interviews</h3>
-            <p>WVLT Interview Coming</p>
-            </div>
+                <div class="video-box-modal can-sec"> 
+                    <h3 class="video-heading">2025 InformTheVoteNJ Interview With Luz Vasquez</h3> 
+                    <iframe src="https://www.youtube.com/embed/IfW6wtACwqY?si=CypW1jxwEfsLc2_6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> 
+                    <br> 
+                    <br> 
+                    <details> 
+                        <summary style="text-align: center; font-weight: bold; font-size: 1.1em; cursor: pointer;">📋 Click here for full interview summary 📋</summary> 
+                        <br> 
+                        <br> 
+                        <div style="padding: 15px 25px; text-align: left;"> <p>In this ~56-minute radio interview, Vineland School Board candidate <strong>Luz Vasquez</strong> 
+                            joins InformTheVoteNJ.com’s Steven Solof on WVLT 92.1 to discuss her background, long-standing watchdog role at board meetings, and a platform organized 
+                            around <em>Educate, Empower, Equip</em>. The conversation covers budget transparency, school safety (including gang dynamics and building security), attendance 
+                            and truancy, and graduation readiness.</p>
+
+                            <p><strong>Background & Watchdog Perspective:</strong><br>
+                            A lifelong Vineland resident and VHS graduate, Vasquez explains how years of regularly attending Board of Education meetings—and following up directly with 
+                            administrators—shape her approach. She wants the district to have vocal champions while still scrutinizing process and outcomes.</p>
+
+                            <p><strong>Platform — Educate · Empower · Equip:</strong><br>
+                            <em>Educate</em>: focus on academics, age-appropriate materials, and a safe learning environment. <em>Empower</em>: ensure parents, students, and staff can speak 
+                            up without fear; resolve issues internally when possible while respecting teacher voice. <em>Equip</em>: align resources and programs so students graduate 
+                            truly prepared for next steps.</p>
+
+                            <p><strong>Budget Transparency & Participation:</strong><br>
+                            Vasquez argues that presentations and data should be readable, accessible, and easy to obtain at meetings (e.g., handouts and links), so engagement isn’t 
+                            burdensome for families. She supports clear summaries that help the public track spending and outcomes.</p>
+
+                            <p><strong>Graduation Readiness & Fundamentals:</strong><br>
+                            Responding to concerns about readiness metrics cited by the host, Vasquez references an <em>86.3%</em> graduation rate versus a state range around 
+                            <em>91–95%</em>, setting a goal of 95–100%. She emphasizes time-on-task, pacing, and tailoring curriculum to local needs so core skills land earlier and more 
+                            consistently.</p>
+
+                            <p><strong>Safety, Gangs & Building Security:</strong><br>
+                            Vasquez acknowledges gang-related dynamics and supports proactive intervention, staff training, and armed security. She also wants a close look at door protocols 
+                            and overall building-entry practices to reduce avoidable risks.</p>
+
+                            <p><strong>Attendance & Truancy:</strong><br>
+                            On chronic absenteeism, she favors strengthening the parent–school bridge, coordinating with social services, and recognizing complex home situations (health, 
+                            single-parent households, incarceration) that impact daily attendance.</p>
+
+                            <p><strong>Final Thoughts:</strong><br>
+                            Vasquez frames her campaign around transparency, positivity, and practical follow-through. Whether you’re lightly engaged or deeply invested in school issues, 
+                            this interview offers a clear look at how she would translate watchdog experience into board governance.</p>
+                        </div>
+                    </details>
+
+                    <br>
+                    <br>
+
+                    <details> 
+                        <summary style="text-align: center; font-weight: bold; font-size: 1.1em; cursor: pointer;">⏳ Click to view timestamps, topics, and takeaways ⏳</summary> 
+                        <div class="video-summary" style="margin-top: 1em;"> 
+                            <h2>Interview Summary – Luz Vasquez</h2> 
+                            <p>This table highlights the key topics covered in the interview, summarizing major takeaways per section.</p> 
+                            <table border="1" cellpadding="8" cellspacing="0" style="width: 100%; border-collapse: collapse;"> 
+                                <thead> 
+                                    <tr> 
+                                        <th style="text-align: left;">Timestamp</th> 
+                                        <th style="text-align: left;">Topic</th> 
+                                        <th style="text-align: left;">Key Takeaways</th> 
+                                    </tr> 
+                                </thead> 
+                                <tbody> 
+                                    <tr> 
+                                        <td>0:00</td> 
+                                        <td>Intro & context</td> 
+                                        <td>Why local coverage matters; election timeline; framing of key Board of Education issues for Vineland.</td> 
+                                    </tr> 
+                                    <tr> 
+                                        <td>5:50</td> 
+                                        <td>Interview begins</td> 
+                                        <td>Vasquez introduces herself and her goals for the conversation.</td> 
+                                    </tr> 
+                                    <tr> 
+                                        <td>6:25</td> 
+                                        <td>Background & watchdog role</td> 
+                                        <td>Lifelong Vineland resident and VHS grad; years of attending BOE meetings; describes herself as a “watchdog” who follows up with administration.</td>
+                                     </tr> 
+                                     <tr> 
+                                        <td>10:00</td> 
+                                        <td>Community pride</td> 
+                                        <td>Argues the district needs champions; wants to encourage and spotlight positives.</td> 
+                                    </tr> 
+                                    <tr> 
+                                        <td>11:00</td> 
+                                        <td>Marketing & outreach</td> 
+                                        <td>Leverage social media plus in-person outreach; highlight student/staff achievements to build pride.</td> 
+                                    </tr> 
+                                    <tr> 
+                                        <td>14:20</td> 
+                                        <td>Path of improvement</td> 
+                                        <td>Adult learner who grew up in poverty; education opened doors; persistence and resilience as themes.</td> 
+                                    </tr> 
+                                    <tr> 
+                                        <td>16:35</td> 
+                                        <td>Human Services degree</td> 
+                                        <td>Program development and continuous improvement; combine qualitative stories with quantitative data for evaluation.</td> 
+                                    </tr> 
+                                    <tr> 
+                                        <td>20:35</td> 
+                                        <td>Platform: Educate / Empower / Equip</td> 
+                                        <td>Educate: academics, age-appropriate materials, safety. Empower: parents, students, teachers; prefer internal resolution while protecting teacher 
+                                            voice. Equip: align resources to real readiness.</td> 
+                                    </tr> 
+                                    <tr> 
+                                        <td>29:45</td> 
+                                        <td>Budget & transparency</td> 
+                                        <td>Presentations should be readable and accessible; provide handouts/links and reduce friction for public participation.</td> 
+                                    </tr> 
+                                    <tr> 
+                                        <td>33:15</td> 
+                                        <td>Graduation readiness</td> 
+                                        <td>Host notes low readiness metrics (some reports ~35%); Vasquez cites 86.3% graduation vs. state ~91–95% (goal 95–100%). Emphasizes fundamentals, 
+                                            pacing, and local tailoring.</td> 
+                                    </tr> 
+                                    <tr> 
+                                        <td>42:40</td> 
+                                        <td>Safety & gangs</td> 
+                                        <td>Acknowledges gang dynamics; supports proactive intervention, staff training, armed guards; wants a close look at door/security practices.</td> 
+                                    </tr> 
+                                    <tr> 
+                                        <td>46:30</td> 
+                                        <td>Attendance / truancy</td> 
+                                        <td>Strengthen parent–school bridge; social-services follow-ups; notes complex home situations affecting attendance.</td> 
+                                    </tr> 
+                                    <tr> 
+                                        <td>51:15</td> 
+                                        <td>Caller: superintendent contract</td> 
+                                        <td>Caller seeks a vote-pledge; Vasquez declines to pre-commit and redirects to her platform and process-driven approach.</td> 
+                                    </tr> 
+                                    <tr> 
+                                        <td>52:55</td> 
+                                        <td>Closing</td> 
+                                        <td>Vasquez says this was her most thorough interview; reiterates transparency and a positive, solutions-focused campaign.</td> 
+                                    </tr> 
+                                    <tr> 
+                                        <td>55:50</td> 
+                                        <td>Paid announcement</td> 
+                                        <td>Candidate’s paid spot summarizing priorities: parental rights, safety, support for staff, and fiscal management.</td> 
+                                    </tr> 
+                                </tbody> 
+                            </table> 
+                        </div> 
+                    </details> 
+                </div>
+
         </details>
 
         <br><br>
