luz name change on ballot

--- a/child_pages/cc-elections/vsb_2024.html
+++ b/child_pages/cc-elections/vsb_2024.html
@@ -665,7 +665,7 @@
                                         </div>
                                         <div class="a-row-2">
                                             <div class="last-name push-down-last-name">
-                                                <a href="Candidates/vasquez.html">Vasquez-Guzman</a>
+                                                <a href="Candidates/vasquez.html">Vasquez</a>
                                             </div>
                                         </div>
                     
