luz page update

--- a/child_pages/cc-elections/Candidates/vasquez.html
+++ b/child_pages/cc-elections/Candidates/vasquez.html
@@ -440,130 +440,187 @@
         <br><br>
 
         <div class="candidate-agenda">
-            <h4 class="sub-heading">Agenda</h4>
+        <h4 class="sub-heading">Agenda</h4>
             <div class="experience can-sec">
-            <ul>
-                <li>
-                <details>
-                    <summary style="color: blue;"><strong>Graduation Ready Rates</strong></summary>
-                    <p>
-                    Vasquez emphasizes the importance of improving graduation readiness across the district through continuous evaluation of practices
-                    and collaborative teamwork with board and administration.
-                    </p>
-                </details>
-                </li><br>
-                <li>
-                <details>
-                    <summary style="color: blue;"><strong>Safety</strong></summary>
-                    <p>
-                    Ensuring the safety of all students and staff is a central priority, tied to creating an environment conducive to academic and
-                    emotional success.
-                    </p>
-                </details>
-                </li><br>
-                <li>
-                <details>
-                    <summary style="color: blue;"><strong>Lower Absenteeism</strong></summary>
-                    <p>
-                    Vasquez seeks to reduce absenteeism rates as a means of strengthening student performance and accountability within the district.
-                    </p>
-                </details>
-                </li><br>
-                <li>
-                <details>
-                    <summary style="color: blue;"><strong>Improve Working Conditions for Staff</strong></summary>
-                    <p>
-                    She highlights the importance of supporting teachers and staff by addressing workplace conditions, which in turn improve student
-                    outcomes.
-                    </p>
-                </details>
-                </li><br>
-                <li>
-                <details>
-                    <summary style="color: blue;"><strong>Fiscal Responsibility</strong></summary>
-                    <p>
-                    Vasquez stresses maintaining a budget that supports educational goals without placing undue strain on local taxpayers.
-                    </p>
-                </details>
-                </li>
-            </ul>
+                <ul>
+                    <li>
+                        <details>
+                            <summary style="color: blue;"><strong>Platform: Educate • Empower • Equip</strong></summary>
+                            <p>
+                                Vasquez frames her approach around three pillars:
+                                <em>Educate</em> (focus on academics, age-appropriate materials, and a safe learning environment),
+                                <em>Empower</em> (parents, students, and educators are supported to speak up and participate), and
+                                <em>Equip</em> (families are connected with resources that address non-academic barriers to learning).
+                                She emphasizes decisions grounded in observation and data rather than trends.
+                            </p>
+                        </details>
+                    </li><br>
+                    <li>
+                        <details>
+                            <summary style="color: blue;"><strong>Graduation Readiness</strong></summary>
+                            <p>
+                                Building on prior statements, Vasquez adds that readiness should be evaluated and improved through a cycle of
+                                continuous assessment. She cites a current readiness rate of <strong>86.3%</strong> locally versus roughly
+                                <strong>91–94.9%</strong> statewide, with a state goal of <strong>95–100%</strong>. She wants to reinforce
+                                fundamentals (especially math and reading), ensure students get sufficient time-on-task, and tailor pacing so that
+                                students master core skills before moving on. She is open to more locally responsive curriculum choices when
+                                statewide trends don’t fit community needs.
+                            </p>
+                        </details>
+                    </li><br>
+                    <li>
+                        <details>
+                            <summary style="color: blue;"><strong>Safety</strong></summary>
+                            <p>
+                                Safety remains a top priority. Vasquez supports maintaining armed guards and proactive intervention between feuding
+                                groups, including staff trained to recognize gang dynamics. She plans to evaluate facility access (e.g., side and
+                                rear doors) to reduce vulnerabilities while keeping front-entrance security strong.
+                            </p>
+                        </details>
+                    </li><br>
+                    <li>
+                        <details>
+                            <summary style="color: blue;"><strong>Lower Absenteeism</strong></summary>
+                            <p>
+                                Vasquez seeks a stronger parent–school bridge and timely follow-ups when attendance flags occur. She favors
+                                coordination with social services when appropriate and stresses that many attendance problems have complex home
+                                causes—so the district should identify issues early and connect families to help.
+                            </p>
+                        </details>
+                    </li><br>
+                    <li>
+                        <details>
+                            <summary style="color: blue;"><strong>Improve Working Conditions & Culture for Staff</strong></summary>
+                            <p>
+                                Vasquez wants educators to be free to share concerns and ideas without fear of repercussion. She encourages resolving
+                                issues internally first when possible, while making sure teacher input is genuinely heard. She views staff voice as
+                                essential to student outcomes.
+                            </p>
+                        </details>
+                    </li><br>
+                    <li>
+                        <details>
+                            <summary style="color: blue;"><strong>Fiscal Responsibility & Budget Transparency</strong></summary>
+                            <p>
+                                Consistent with fiscal stewardship, Vasquez also wants the district’s public presentations—especially budgets—to be
+                                easy to follow. That includes readable visuals and providing handouts or online materials so attendees can participate
+                                meaningfully rather than straining to see tiny numbers on distant screens.
+                            </p>
+                        </details>
+                    </li>
+                </ul>
             </div>
 
             <h4 class="sub-heading">Issues</h4>
             <div class="experience can-sec">
-            <ul>
-                <li>
-                <details>
-                    <summary style="color: blue;"><strong>Parental Rights</strong></summary>
-                    <p>
-                    Vasquez identifies parental rights as a high-priority issue. She believes parents should have primary influence in their
-                    children’s education and advocates for policies that strengthen the home-to-school connection while opposing policies that
-                    reduce parental involvement.
-                    </p>
-                </details>
-                </li>
-            </ul>
+                <ul>
+                    <li>
+                        <details>
+                            <summary style="color: blue;"><strong>Parental Rights</strong></summary>
+                            <p>
+                                Vasquez identifies parental rights as a high priority. She believes parents should have primary influence in their
+                                children’s education and advocates for policies that strengthen the home-to-school connection while opposing policies
+                                that reduce parental involvement. She also emphasizes timely notification when challenges arise and connecting
+                                families to community resources.
+                            </p>
+                        </details>
+                    </li><br>
+                    <li>
+                        <details>
+                            <summary style="color: blue;"><strong>Transparency & Public Participation</strong></summary>
+                            <p>
+                                She wants meetings and reports (e.g., graduation readiness and budget data) presented in ways the public can easily
+                                review—so residents who already show up are not made to feel like a burden for asking clarification questions.
+                            </p>
+                        </details>
+                    </li><br>
+                    <li>
+                        <details>
+                            <summary style="color: blue;"><strong>Discipline, Behavior, and School Climate</strong></summary>
+                            <p>
+                                Vasquez acknowledges ongoing behavior and safety concerns and supports proactive steps to deter fights and gang
+                                activity, while maintaining a learning environment where teachers can teach and students can learn without
+                                distraction.
+                            </p>
+                        </details>
+                    </li>
+                </ul>
             </div>
 
             <br>
 
             <h4 class="sub-heading">Background and Experience</h4>
             <div class="experience can-sec">
-            <ul>
-                <li>
-                <details>
-                    <summary style="color: blue;"><strong>Lifelong Vineland Resident and Graduate</strong></summary>
-                    <p>
-                    Vasquez is a lifelong resident of Vineland and a proud graduate of Vineland High School. Her roots in the community give her a
-                    strong connection to local families and schools.
-                    </p>
-                </details>
-                </li><br>
-                <li>
-                <details>
-                    <summary style="color: blue;"><strong>Master’s Degree in Human Services</strong></summary>
-                    <p>
-                    She holds a master’s degree in human services, emphasizing the role of education in creating opportunities and upward mobility.
-                    </p>
-                </details>
-                </li><br>
-                <li>
-                <details>
-                    <summary style="color: blue;"><strong>Lifelong Path of Improvement</strong></summary>
-                    <p>
-                    Growing up in a low-income household, Vasquez worked to create a better future for her family. She connects with the struggles
-                    of students and families striving to overcome financial obstacles.
-                    </p>
-                </details>
-                </li><br>
-                <li>
-                <details>
-                    <summary style="color: blue;"><strong>Active Community Member</strong></summary>
-                    <p>
-                    Vasquez has regularly attended Board of Education meetings since 2019, speaking on curriculum changes and policies, and
-                    presenting to new board members to encourage responsiveness to parents and students.
-                    </p>
-                </details>
-                </li>
-            </ul>
+                <ul>
+                    <li>
+                        <details>
+                            <summary style="color: blue;"><strong>Lifelong Vineland Resident and Graduate</strong></summary>
+                            <p>
+                                Vasquez is a lifelong resident of Vineland and a proud graduate of Vineland High School. She speaks often about civic
+                                pride—“bleeding red and gray”—and wants to serve as a champion for students, staff, and administrators.
+                            </p>
+                        </details>
+                    </li><br>
+                    <li>
+                        <details>
+                            <summary style="color: blue;"><strong>Master’s in Human Services (Bachelor’s in Liberal Arts)</strong></summary>
+                            <p>
+                                Her graduate studies emphasized <em>program development</em> and a cycle of continuous improvement using both
+                                <em>qualitative</em> (stories of impact) and <em>quantitative</em> (measurable outcomes) data. She intends to apply that
+                                lens to board work—evaluating what works, modifying what doesn’t, and avoiding trend-chasing.
+                            </p>
+                        </details>
+                    </li><br>
+                    <li>
+                        <details>
+                            <summary style="color: blue;"><strong>Lifelong Path of Improvement</strong></summary>
+                            <p>
+                                An adult learner who grew up in poverty, Vasquez returned to complete her degrees while raising a family. She cites
+                                education as “the greatest equalizer” and a key to unlocking opportunity.
+                            </p>
+                        </details>
+                    </li><br>
+                    <li>
+                        <details>
+                            <summary style="color: blue;"><strong>Active Community Member & Watchdog</strong></summary>
+                            <p>
+                                A regular attendee of Board of Education meetings since 2018, Vasquez has delivered annual reorganization remarks and
+                                frequently follows up with administrators to ensure concerns are addressed. She describes her role as a respectful
+                                watchdog—encouraging responsiveness to parents, students, and staff.
+                            </p>
+                        </details>
+                    </li><br>
+                    <li>
+                        <details>
+                            <summary style="color: blue;"><strong>Campaign Approach</strong></summary>
+                            <p>
+                                Vasquez is running a positive, multi-channel campaign—leveraging social media, neighborhood outreach, and public
+                                forums—to spotlight student and staff achievements and encourage a culture of encouragement over cynicism.
+                            </p>
+                        </details>
+                    </li>
+                </ul>
             </div>
 
             <h4 class="sub-heading">Party Affiliation & Ideology</h4>
             <div class="experience can-sec">
                 <p>
-                    While the Vineland School Board race is non-partisan, Vasquez identifies herself as conservative and approaches issues from that
-                    perspective. She notes her faith as an influence on her political outlook.
+                    While the Vineland School Board race is non-partisan, Vasquez identifies as conservative and notes that her faith informs her
+                    outlook. She also stresses that decisions should be grounded in data and observation rather than trends.
                 </p>
             </div>
 
             <h4 class="sub-heading">Comparison</h4>
             <div class="experience can-sec">
                 <p>
-                    Vasquez distinguishes herself by highlighting her long-standing advocacy on behalf of children and parents at local, state, and
-                    legislative forums. She frames her candidacy as a natural progression of years of involvement and public speaking on educational
-                    issues.
+                    Vasquez distinguishes herself through long-standing advocacy on behalf of children and parents, a data-driven mindset from her
+                    human services background, and proactive follow-ups with administration when educators raise concerns. In the radio interview,
+                    when pressed by a caller to pre-commit on a future superintendent vote, she declined to be “boxed into a corner,” redirecting to
+                    her platform and overall priorities.
                 </p>
             </div>
+    </div>
+
 
             <h4 class="sub-heading">Source Material</h4>
             <div class="experience can-sec">
